# hltv-data

./: .gitignore  LICENCE  MANIFEST.in  README.md  client.py  pyproject.toml  requirements.txt  setup.py
hltv_data/: __init__.py  client.py
